# software-engineering

./: .clang-tidy  .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  msan_suppressions.txt
.github/: codecov.yml
.github/workflows/: build-cmake.yml
cmake/: CompilerFlags.cmake  Coverage.cmake  Sanitizers.cmake  TestMacros.cmake
docs/: code_structure.rst  conf.py  index.rst  laplace_equation.rst  software_engineering.rst
docs/doxygen/: CMakeLists.txt
src/: CMakeLists.txt
src/laplace/: CMakeLists.txt  boundary_conditions.cpp  boundary_conditions.h  grid.cpp  grid.h  solver.cpp  solver.h
src/laplace/tests/: CMakeLists.txt  boundary_conditions.cpp  grid.cpp  msan_driver.cpp  solver.cpp  test_grid.cpp
src/program/: CMakeLists.txt  main.cpp
src/software-engineering/program/: CMakeLists.txt
